--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "@types/googlemaps": "^3.43.3",
     "element-plus": "^2.3.12",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
+    "@types/leaflet": "^1.9.4",
     "@types/node": "^18.17.5",
     "@vitejs/plugin-vue": "^4.3.1",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
