POP-18 store token

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-plus": "^2.3.12",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
