--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "@googlemaps/js-api-loader": "^1.16.2",
     "@types/googlemaps": "^3.43.3",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.5.0",
     "element-plus": "^2.3.12",
     "leaflet": "^1.9.4",
