--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "pinia": "^2.1.6",
+    "swiper": "^10.3.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
