--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Get the latest Docker image tag
       id: get_last_tag
       run: |
-        TOKEN=$(curl -s -H "Content-Type: application/json" -X POST -d '{"username": "'${{ secrets.DOCKER_USERNAME }}'", "password": "'${{ secrets.DOCKER_PASSWORD }}'"}' "https://hub.docker.com/v2/users/login/" | jq -r .token)
-        LAST_TAG=$(curl -s -H "Authorization: JWT $TOKEN" -X GET "https://hub.docker.com/repository/docker/dolphindatabase/visiona-front/tags/?page_size=1" | jq -r '.results[0].name')
+        TOKEN="${{ secrets.DOCKER_HUB_TOKEN }}"
+        LAST_TAG=$(curl -s -H "Authorization: Bearer $TOKEN" -X GET "https://hub.docker.com/repository/docker/dolphindatabase/visiona-front/tags/?page_size=1" | jq -r '.results[0].name')
         echo "::set-output name=tag::$LAST_TAG"
 
     - name: Increment the Docker image tag
