--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@googlemaps/js-api-loader": "^1.16.2",
     "@types/googlemaps": "^3.43.3",
     "@vueup/vue-quill": "^1.2.0",
+    "apexcharts": "^3.44.0",
     "axios": "^1.5.0",
     "element-plus": "^2.3.12",
     "leaflet": "^1.9.4",
@@ -23,7 +24,8 @@
     "pinia": "^2.1.6",
     "swiper": "^10.3.1",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-apexcharts": "^1.4.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
