--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "apexcharts": "^3.44.0",
     "axios": "^1.5.0",
     "element-plus": "^2.3.12",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "pinia": "^2.1.6",
